force-app/main/default/objects/Lead/fields/Contact_Me__c.field-meta.xml
<CustomField>
    <fullName>Contact_Me__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Me</label>
    <type>Checkbox</type>
</CustomField>