force-app/main/default/objects/Lead/fields/Customer_Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Engagement_Type__c</fullName>
    <label>Customer Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote Request</fullName>
            </value>
            <value>
                <fullName>Demo Request</fullName>
            </value>
            <value>
                <fullName>Contact Me</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>