force-app/main/default/objects/Lead/fields/Purchase_Plans__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Plans__c</fullName>
    <label>Purchase Plans</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>